# r-index-move-datastructure

./: .gitmodules  CMakeLists.txt  ri-mds-build.cpp  ri-mds-count.cpp  ri-mds-locate.cpp  ri-mds-revert.cpp  ri-mds-space.cpp
internal/: definitions.hpp  huff_string.hpp  r_index_mds.hpp  rle_string.hpp  sparse_hyb_vector.hpp  sparse_sd_vector.hpp  succinct_bit_vector.hpp
sdsl/lib/pkgconfig/: libdivsufsort.pc  libdivsufsort64.pc  sdsl-lite.pc
